--- a/composer.json
+++ b/composer.json
@@ -1,49 +1,28 @@
 {
-    "name": ":vendor/:package_name",
+    "name": "bajuju67/open-api-validator-module",
     "type": "library",
     "description": ":package_description",
     "keywords": [
-        ":vendor",
-        ":package_name"
+        "bajuju67",
+        "OpenApiValidatorModule"
     ],
-    "homepage": "https://github.com/:vendor/:package_name",
+    "homepage": "https://github.com/bajuju67/OpenApiValidatorModule",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": ":author_email",
-            "homepage": ":author_website",
+            "name": "Mohamed A. Benhamida",
+            "email": "bajuju67@gmail.com",
+            "homepage": "https://bajuju67.github.io",
             "role": "Developer"
         }
     ],
     "require": {
-        "php" : "~7.2"
-    },
-    "require-dev": {
-        "phpunit/phpunit" : ">=8.0",
-        "squizlabs/php_codesniffer": "^3.0"
+        "codeception/codeception" : "*",
+        "league/openapi-psr7-validator": "^0.16.1"
     },
     "autoload": {
         "psr-4": {
-            ":vendor\\:package_name\\": "src"
+            "Codeception\\": "src"
         }
-    },
-    "autoload-dev": {
-        "psr-4": {
-            ":vendor\\:package_name\\": "tests"
-        }
-    },
-    "scripts": {
-        "test": "phpunit",
-        "check-style": "phpcs src tests",
-        "fix-style": "phpcbf src tests"
-    },
-    "extra": {
-        "branch-alias": {
-            "dev-master": "1.0-dev"
-        }
-    },
-    "config": {
-        "sort-packages": true
     }
 }
