--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "bajuju67/open-api-validator-module",
     "type": "library",
-    "description": ":package_description",
+    "description": "league/openapi-psr7-validator module for Codeception.",
     "keywords": [
         "bajuju67",
         "OpenApiValidatorModule"
